Add viewmodels and trendline classes

--- a/src/proj/DBCourseWork/DataBaseUI/appsettings.json
+++ b/src/proj/DBCourseWork/DataBaseUI/appsettings.json
@@ -1,8 +1,8 @@
 {
-	"ConnectionStrings" : 
-	{
-		"UserConnection" : "Host=localhost;Port=5432;Database=spsr_lt_db;Username=user;Password=user",
-		"AnalystConnection" : "Host=localhost;Port=5432;Database=spsr_lt_db;Username=analyst;Password=analyst",
-		"AdminConnection" : "Host=localhost;Port=5432;Database=spsr_lt_db;Username=admin;Password=admin"
+	"ConnectionStrings": {
+		"UserConnection": "Host=localhost;Port=5432;Database=spsr_lt_db;Username=user;Password=user",
+		"AnalystConnection": "Host=localhost;Port=5432;Database=spsr_lt_db;Username=analyst;Password=analyst",
+		"AdminConnection": "Host=localhost;Port=5432;Database=spsr_lt_db;Username=admin;Password=admin",
+		"CurrentConnection": "Host=localhost;Port=5432;Database=spsr_lt_db;Username=admin;Password=admin"
 	}
 }
