Add 2/4 views and fix some bugs in reps

--- a/src/proj/DBCourseWork/DataBaseUI/DataBaseUI.csproj
+++ b/src/proj/DBCourseWork/DataBaseUI/DataBaseUI.csproj
@@ -28,6 +28,12 @@
     <None Update="appsettings.json">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
+    <None Update="Views\DialogWindows\AddShopWindow.xaml">
+      <Generator>MSBuild:Compile</Generator>
+    </None>
+    <None Update="Views\DialogWindows\UpdateShopWindow.xaml">
+      <Generator>MSBuild:Compile</Generator>
+    </None>
   </ItemGroup>
 
 </Project>
