--- a/src/proj/DBCourseWork/DataBaseUI/appsettings.json
+++ b/src/proj/DBCourseWork/DataBaseUI/appsettings.json
@@ -4,6 +4,6 @@
 		"AnalystConnection": "Host=localhost;Port=5432;Database=spsr_lt_db;Username=analyst;Password=analyst",
 		"AdminConnection": "Host=localhost;Port=5432;Database=spsr_lt_db;Username=admin;Password=admin",
 		"MSSQLConnection": "Server=(localdb)\\mssqllocaldb;Database=db_cp;Trusted_Connection=True;",
-		"DefaultConnection": "Host=localhost;Port=5432;Database=spsr_lt_db;Username=admin;Password=admin"
+		"DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=db_cp;Trusted_Connection=True;"
 	}
 }
